2005-09-21  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (create_object): Fix a
	memory leak. Fixes #314019

2005-09-16  Irene Huang <Irene.Huang@sun.com>

	* camel/Makefile.am: Removed KRB5_LIBS from libcamelexchange_la_LIBADD.
	* configure.in: Removed the Kerberos section for KRB5 configurations.
	* docs/reference/Makefile.am: Removed KRB5_LIBS from GTKDOC_LIBS.
	* storage/Makefile.am: Remove KRB5_CFLAGS from -DG_LOG_DOMAIN, KRB5_LIBS	from evolution_exchange_storage_LDADD, ximian_connector_setup_LDADD and
	migr_test_LDADD.

2005-09-15  Arunprakash  <arunp@novell.com>

	* camel/camel-exchange-folder.c (exchange_expunge) : Checks for
	offline mode and returns an error.
	** Fixes #272987.

2005-09-13  Roozbeh Pournader  <roozbeh@farsiweb.info>

	* configure.in: Added 'fa' (Persian) to ALL_LINGUAS.

2005-09-12  Shakti Sen <shprasad@novell.com>
 
	*addressbook/e-book-backend-exchange.c 
	(http_status_to_pas): Showing the appropriate 
	error message by returning the appropriate status.

	Fixes bug #241499.

2005-09-08  Arunprakash  <arunp@novell.com>

	* camel/camel-exchange-store.c (exchange_get_folder) : Reverted the
	changes made for #314573. Now remove the folder from the hash table
	if the folder construction fails, as the inserted is needed for
	processing the notifications (includes new mail) from the mail stub.
	** Fixes #315342.
	
2005-08-30  Arunprakash  <arunp@novell.com>

	* camel/camel-exchange-store.c (exchange_get_folder) : Insert into the
	hash table only when the folder construction succeeds.
	* mail/mail-stub-exchange.c (get_folder_online) : Changed the return
	type to indicate failure.
	(get_folder) : Returns on failure of online code.
	** Fixes #314573.
	
2005-08-28  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Updated the version number to 2.4.0

2005-08-28  Praveen Kumar  <kpraveen@novell.com>

	* camel/camel-exchange-provider.c : Reverting the change made in