@@ -1,3 +1,10 @@
+2005-09-28  Arunprakash  <arunp@novell.com>
+
+	* mail/mail-stub-exchange.c (append_message) : Unread flag has to be
+	explicitly set for unread messages. Exchange server assumes read as
+	default for appended messages.
+	** Fixes #239641.
+
 2005-09-21  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* calendar/e-cal-backend-exchange-calendar.c (create_object): Fix a
